--- a/archives/zhihu-search/2023-12-07.md
+++ b/archives/zhihu-search/2023-12-07.md
@@ -1,11 +1,10 @@
 # 2023-12-07
 
-共 11 条
+共 12 条
 
 <!-- BEGIN ZHIHUSEARCH -->
-<!-- 最后更新时间 Thu Dec 07 2023 16:00:43 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Thu Dec 07 2023 17:00:47 GMT+0800 (China Standard Time) -->
 1. [考研调剂 ](https://www.zhihu.com/search?q=考研调剂 )
-1. [太阳vs湖人](https://www.zhihu.com/search?q=太阳vs湖人)
 1. [国考报名人数](https://www.zhihu.com/search?q=国考报名人数)
 1. [国考申论怎么复习](https://www.zhihu.com/search?q=国考申论怎么复习)
 1. [雅思词汇](https://www.zhihu.com/search?q=雅思词汇)
@@ -14,5 +13,7 @@
 1. [第一学历真的很重要吗](https://www.zhihu.com/search?q=第一学历真的很重要吗)
 1. [公考常识](https://www.zhihu.com/search?q=公考常识)
 1. [剪辑教程](https://www.zhihu.com/search?q=剪辑教程)
+1. [剪辑自学](https://www.zhihu.com/search?q=剪辑自学)
+1. [太阳vs湖人](https://www.zhihu.com/search?q=太阳vs湖人)
 1. [张艺兴新歌](https://www.zhihu.com/search?q=张艺兴新歌)
 <!-- END ZHIHUSEARCH -->
